<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/gender_title"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/bottom_spacing"
        android:text="@string/i_am_a"
        android:textAppearance="@style/Title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/gender_spacer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/gender_spacer"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/gender_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/woman_button"
        style="@style/Button.Gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/bottom_margin"
        android:text="@string/woman"
        app:layout_constraintBottom_toTopOf="@id/glh55"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/man_button"
        style="@style/Button.Gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bottom_margin"
        android:text="@string/man"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/glh55"
        app:layout_constraintVertical_bias="0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glh55"
        android:layout_width="@dimen/zero"
        android:layout_height="@dimen/zero"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".55" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/show_gender_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/bottom_margin"
        android:buttonTint="@color/orange"
        android:text="@string/show_my_gender"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1" />

</androidx.constraintlayout.widget.ConstraintLayout>