<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/birthday_title"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/bottom_spacing"
        android:text="@string/my_birthday_is"
        android:textAppearance="@style/Title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/birthday_spacer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/birthday_spacer"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/birthday_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/birthday_layout"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bottom_spacing"
        app:boxStrokeColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/birthday_title"
        app:layout_constraintVertical_bias="0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/birthday_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:hint="@string/birthday_input"
            android:inputType="date" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/bottom_text_spacing"
            android:gravity="bottom"
            android:text="@string/your_age_will_be_public" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>