<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/school_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Button.Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/school_title"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/title_top_margin"
        android:layout_marginBottom="@dimen/bottom_spacing"
        android:text="@string/my_school_is"
        android:textAppearance="@style/Title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/glv50"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/glv15"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/school_layout"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/bottom_spacing"
        app:boxStrokeColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/glv85"
        app:layout_constraintStart_toEndOf="@id/glv15"
        app:layout_constraintTop_toBottomOf="@id/school_title"
        app:layout_constraintVertical_bias="0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/school_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:hint="@string/school_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/bottom_text_spacing"
            android:gravity="bottom"
            android:text="@string/this_is_how_it_will_appear" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/school_continue_button"
        style="@style/Button.Inactive"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/bottom_margin"
        android:text="@string/continue_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/glv95"
        app:layout_constraintStart_toEndOf="@id/glv5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glv5"
        android:layout_width="@dimen/zero"
        android:layout_height="@dimen/zero"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glv15"
        android:layout_width="@dimen/zero"
        android:layout_height="@dimen/zero"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glv50"
        android:layout_width="@dimen/zero"
        android:layout_height="@dimen/zero"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glv85"
        android:layout_width="@dimen/zero"
        android:layout_height="@dimen/zero"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glv95"
        android:layout_width="@dimen/zero"
        android:layout_height="@dimen/zero"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".95" />
</androidx.constraintlayout.widget.ConstraintLayout>